# 2Dphysics-game

./: .gitattributes  2D.html  README.md
cpp_python_core/: .gitignore  CMakeLists.txt  main.py  main.spec  physics_core.cpp
